[metadata]
name         = 'multiecho'
version      = '0.31'
description  = 'Combine multi-echoes from a multi-echo fMRI acquisition.'
author       = 'Daniel Gomez and Marcel Zwiers'
author_email = 'm.zwiers@donders.ru.nl'
license      = 'Apache-2.0 OR MIT'
url          = 'https://github.com/Donders-Institute/multiecho'

[requires]
python_version = '>= 3.6'

[build-system]
requires = ['setuptools >= 62.2.0', 'wheel', 'argparse-manpage[setuptools]']

[tool.hatch.commands]
prerelease = 'hatch build'

[tool.build_manpages]
manpages = ["man/mecombine.1:function=make_parser:pyfile=multiecho/_args.py"]
